# Kani

git_apply_lexer/: Cargo.toml  Makefile
git_apply_lexer/src/: applier.rs  error.rs  fs.rs  lexer.rs  lib.rs  main.rs  parser.rs
git_apply_lexer/tests/: mod.rs
git_apply_lexer/tests/git/: applier_test.rs  lexer_test.rs  mod.rs  parser_test.rs
git_apply_lexer/tests/hit/: parser_test.rs
